rtkaller-ind/src/t32/t32.h

typedef unsigned __int8   uint8_t;
typedef unsigned __int32  uint32_t;
/***********************/
/* basic API functions */
/***********************/

#define T32_DEV_OS              0
#define T32_DEV_ICD             1
T32EXTERN int  T32_Config(const char *String1, const char *String2);
T32EXTERN int  T32_Init(void);
T32EXTERN int  T32_Attach(int DeviceSpecifier);
T32EXTERN int  T32_Terminate(int ShellReturnValue);
T32EXTERN int  T32_Exit(void);
T32EXTERN int  T32_Nop(void);
T32EXTERN int  T32_Cmd(const char *Command);
T32EXTERN int  T32_ExecuteCommand(const char *pCommand, char* pBuffer, uint32_t BufferSize); /* preliminary */
T32EXTERN int  T32_GetPracticeState(int *pPracticeState);
#define T32_PRINTCODE_ASCII                        0x41
#define T32_PRINTCODE_ASCIIP                       0x42
#define T32_PRINTCODE_ASCIIE                       0x43
#define T32_PRINTCODE_CSV                          0x44
#define T32_PRINTCODE_XML                          0x45
T32EXTERN int  T32_Go(void);
T32EXTERN int  T32_Break(void);
T32EXTERN int  T32_ResetCPU(void);
T32EXTERN int  T32_ReadMemory     (uint32_t Address, int Access, uint8_t *pBuffer, int Size);
T32EXTERN int  T32_WriteMemory    (uint32_t Address, int Access, const uint8_t *pBuffer, int Size);
T32EXTERN int  T32_GetSymbol(const char *SymbolName, uint32_t *pAddress, uint32_t *pSize, uint32_t *pAccess);
T32EXTERN int  T32_ReadVariableValue (const char *VariableName, uint32_t *pValueLower32Bit, uint32_t *pValueUpper32Bit);
T32EXTERN int  T32_WriteVariableValue (const char *VariableName, uint32_t ValueLower32Bit, uint32_t ValueUpper32Bit);
T32EXTERN int  T32_GetWindowContent(const char *command, char * buffer, uint32_t requested, uint32_t offset, uint32_t print_code);
T32EXTERN int  T32_WriteRegisterByName(const char *RegisterName, uint32_t ValueLower32Bit, uint32_t ValueUpper32Bit);